--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -4,10 +4,11 @@
 
 ## 前言
 
-**2、本文的写作意图：**
+1.本文
 
-在本人研究和学习过程中，发现**四旋翼无人机控制仿真**方面的免费网络学习资料较少，学习时遇到了一定的困难，故计划写一篇文章贡献给互联网，希望能给同道中人带来一些帮助。另一方面也是想总结记录一下个人的研究过程。
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MTM4NTQyNTAsMjEyNDY3MzY0NiwxOD
-cyMjQyMTA5XX0=
+eyJoaXN0b3J5IjpbLTczMDcwNDYwOSwyMTI0NjczNjQ2LDE4Nz
+IyNDIxMDldfQ==
 -->
