多旋翼无人机建模.md updated from https://stackedit.cn/

--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -1,5 +1,5 @@
 
-
+[TOC]
 # 四旋翼无人机建模笔记
 
 ## 前言
@@ -9,12 +9,25 @@
 
 ## 正文
 
-### **1.位置控制器**
+### 整体说明
+
+![整体建构](/imgs/2025-05-03/xp5jozbgKaA8inmS.png "整体建构")
+
+如图所示，此即为四旋翼无人机建模的整体建构图，并且采用**双闭环级联控制结构**，由外到内分为：
+
+1.  ​**位置控制环**​（外层闭环）
+    -   输入：给定轨迹（三维空间期望位置）
+    -   输出：姿态指令（期望欧拉角 φ^d, θ^d, ψ^d）
+2.  ​**姿态控制环**​（内层闭环）
+    -   输入：姿态指令
+    -   输出：电机转速指令 ω1~ω4
+3.  ​**动力学执行层**
+    -   电机模型 → 飞行器动力学 → 实时姿态/位置反馈
 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNTYwNzgxNzUsMzEzNDU4MDIwLC03Mz
-A3MDQ2MDksMjEyNDY3MzY0NiwxODcyMjQyMTA5XX0=
+eyJoaXN0b3J5IjpbMTA3MDA5ODM0NSwzMTM0NTgwMjAsLTczMD
+cwNDYwOSwyMTI0NjczNjQ2LDE4NzIyNDIxMDldfQ==
 -->
