--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -24,10 +24,10 @@
  3.  ​**动力学执行层**
    -   电机模型 → 飞行器动力学 → 实时姿态/位置反馈
  4.  **详解**
-   - 
+   -  在位置控制环中输入
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIzNTgyMjA2OSwxMDcwMDk4MzQ1LDMxMz
+eyJoaXN0b3J5IjpbMTQ5ODY3NDA5MywxMDcwMDk4MzQ1LDMxMz
 Q1ODAyMCwtNzMwNzA0NjA5LDIxMjQ2NzM2NDYsMTg3MjI0MjEw
 OV19
 -->
