--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -24,10 +24,10 @@
  3.  ​**动力学执行层**
    -   电机模型 → 飞行器动力学 → 实时姿态/位置反馈
  4.  **详解**
-   -  在`位置控制环`中输入
+   -  在`位置控制环`中输入期望的位置后可得出一个U
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4Mzk0NjM2NjUsMTA3MDA5ODM0NSwzMT
-M0NTgwMjAsLTczMDcwNDYwOSwyMTI0NjczNjQ2LDE4NzIyNDIx
-MDldfQ==
+eyJoaXN0b3J5IjpbMTUxNTM2NjU0NSwxMDcwMDk4MzQ1LDMxMz
+Q1ODAyMCwtNzMwNzA0NjA5LDIxMjQ2NzM2NDYsMTg3MjI0MjEw
+OV19
 -->
