多旋翼无人机建模.md updated from https://stackedit.cn/

--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -17,7 +17,7 @@
 
  1.  ​**位置控制环**​（外层闭环）
    -   输入：给定轨迹（三维空间期望位置）
-   -   输出：姿态指令（期望欧拉角 φ^d, θ^d, ψ^d）
+   -   输出：姿态指令（期望欧拉角 φ~d~, θ~d~, ψ~d~）
  2.  ​**姿态控制环**​（内层闭环）
    -   输入：姿态指令
    -   输出：电机转速指令 ω1~ω4
@@ -27,7 +27,7 @@
    -  在`位置控制环`中输入期望的位置后可得出一个U~1~
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODc1NzIxNzE2LDEwNzAwOTgzNDUsMzEzND
-U4MDIwLC03MzA3MDQ2MDksMjEyNDY3MzY0NiwxODcyMjQyMTA5
-XX0=
+eyJoaXN0b3J5IjpbLTEwNzkzMDc3ODIsODc1NzIxNzE2LDEwNz
+AwOTgzNDUsMzEzNDU4MDIwLC03MzA3MDQ2MDksMjEyNDY3MzY0
+NiwxODcyMjQyMTA5XX0=
 -->
