多旋翼无人机建模.md updated from https://stackedit.cn/

--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -24,10 +24,11 @@
  3.  ​**动力学执行层**
    -   电机模型 → 飞行器动力学 → 实时姿态/位置反馈
  4.  **详解**
-   -  在`位置控制环`中输入期望的位置后可经计算得出一个U~1~（推力F以及 两个期望角θ~d~, ψ~d~），并且在`姿态控制环`中输入φ~d~
+    -  在`位置控制环`中输入期望的位置后可经计算得出一个U~1~（推力F以及 两个期望角θ~d~, ψ~d~），并且在`姿态控制环`中输入φ~d~，在
+    - 经过内外环控制之后得到的
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTg1NzQwOTMsODc1NzIxNzE2LDEwNz
-AwOTgzNDUsMzEzNDU4MDIwLC03MzA3MDQ2MDksMjEyNDY3MzY0
-NiwxODcyMjQyMTA5XX0=
+eyJoaXN0b3J5IjpbLTEzNDQxMzE2NSw4NzU3MjE3MTYsMTA3MD
+A5ODM0NSwzMTM0NTgwMjAsLTczMDcwNDYwOSwyMTI0NjczNjQ2
+LDE4NzIyNDIxMDldfQ==
 -->
