多旋翼无人机建模.md updated from https://stackedit.cn/

--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -25,10 +25,10 @@
    -   电机模型 → 飞行器动力学 → 实时姿态/位置反馈
  4.  **详解**
     -  在`位置控制环`中输入期望的位置后可经计算得出一个U~1~（推力F以及 两个期望角θ~d~, ψ~d~），并且在`姿态控制环`中输入φ~d~，在内环`姿态控制环`中经计算得到三个力矩U~2~U~3~U~4~
-    - 经过内外环控制之后得到的一个推力U~1~与三个力矩U~2~~ U~4~，此sizhe（U~1~ ~ U~4~模拟实际四旋翼无人机的四个电机转速）
+    - 经过内外环控制之后得到的一个推力U~1~与三个力矩U~2~~ U~4~，此四者经`电机转速逆变换`（U~1~ ~ U~4~模拟实际四旋翼无人机的四个电机转速）
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMTYwMDIwMDQsODc1NzIxNzE2LDEwNz
+eyJoaXN0b3J5IjpbLTEzNTkxNjcxNjQsODc1NzIxNzE2LDEwNz
 AwOTgzNDUsMzEzNDU4MDIwLC03MzA3MDQ2MDksMjEyNDY3MzY0
 NiwxODcyMjQyMTA5XX0=
 -->
