多旋翼无人机建模.md updated from https://stackedit.cn/

--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -26,10 +26,10 @@
  4.  **详解**
     -  在`位置控制环`中输入期望的位置后可经计算得出一个U~1~（推力F以及 两个期望角θ~d~, ψ~d~），并且在`姿态控制环`中输入φ~d~，在内环`姿态控制环`中经计算得到三个力矩U~2~U~3~U~4~
     - 经过内外环控制之后得到的一个推力U~1~与三个力矩U~2~~ U~4~，此四者经`电机转速逆变换`后，变为 ω~1~~ ω~4~（ ω~1~ ~ ω~4~模拟实际四旋翼无人机的四个电机转速）
-    - 由电机模型yanzh
+    - 由电机模型延展到飞行器模型，期间需考虑
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEwOTE4MTY0MSw4NzU3MjE3MTYsMTA3MD
-A5ODM0NSwzMTM0NTgwMjAsLTczMDcwNDYwOSwyMTI0NjczNjQ2
-LDE4NzIyNDIxMDldfQ==
+eyJoaXN0b3J5IjpbMzc1OTg0NDk5LDg3NTcyMTcxNiwxMDcwMD
+k4MzQ1LDMxMzQ1ODAyMCwtNzMwNzA0NjA5LDIxMjQ2NzM2NDYs
+MTg3MjI0MjEwOV19
 -->
