多旋翼无人机建模.md updated from https://stackedit.cn/

--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -4,7 +4,7 @@
 
 ## 前言
 
- 1. 本文为本人学习四旋翼飞行器时初步的一个模拟仿真，
+ 本文为本人学习四旋翼飞行器时初步的一个模拟仿真。因校区问题而造成的资源不足，只能进行仿真学习，希冀可以对未来的进一步实物学习有所帮助。
 
 
 
@@ -30,7 +30,7 @@
     - 由`电机模型`延展到`飞行器数学模型`，（期间需考虑空气阻力、螺旋效应等因素的影响）。飞行器数学模型再实时进行`姿态/位置反馈`。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc4MDI0MjU0MCwtMTM4NzcxNjUzMCw4Nz
+eyJoaXN0b3J5IjpbMTAwNDg0NzI3NywtMTM4NzcxNjUzMCw4Nz
 U3MjE3MTYsMTA3MDA5ODM0NSwzMTM0NTgwMjAsLTczMDcwNDYw
 OSwyMTI0NjczNjQ2LDE4NzIyNDIxMDldfQ==
 -->
