多旋翼无人机建模.md updated from https://stackedit.cn/

--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -29,8 +29,11 @@
     - 经过内外环控制之后得到的一个推力U~1~与三个力矩U~2~~ U~4~，此四者经`电机转速逆变换`后，变为 ω~1~~ ω~4~（ ω~1~ ~ ω~4~模拟实际四旋翼无人机的四个电机转速，得到`电机模型`）
     - 由`电机模型`延展到`飞行器数学模型`，（期间需考虑空气阻力、螺旋效应等因素的影响）。飞行器数学模型再实时进行`姿态/位置反馈`。
 
+
+
+> Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAwNDg0NzI3NywtMTM4NzcxNjUzMCw4Nz
+eyJoaXN0b3J5IjpbMjA3NjUxMDE2MiwtMTM4NzcxNjUzMCw4Nz
 U3MjE3MTYsMTA3MDA5ODM0NSwzMTM0NTgwMjAsLTczMDcwNDYw
 OSwyMTI0NjczNjQ2LDE4NzIyNDIxMDldfQ==
 -->
