--- a/多旋翼无人机建模.md
+++ b/多旋翼无人机建模.md
@@ -25,7 +25,7 @@
  3.  ​**动力学执行层**
    -   电机模型 → 飞行器动力学 → 实时（姿态/位置）反馈
  4.  **详解**
-    -  在`位置控制环`中输入期望的位置后可经计算得出一个U~1~（推力F以及 两个期望角θ~d~, ψ~d~），并且在`姿态控制环`中输入φ~d~，在内环`姿态控制环`中经计算得到三个力矩U~2~U~3~U~4~
+    -  在`位置控制环`中输入期望的位置后可经计算得出一个U~1~（推力F以及 两个期望角θ~d~, ψ~d~），并且在`姿态控制环`中输入φ~d~，在内环`姿态控制环`中经计算得到三个力矩U~2~U~3~U~4~（对应滚转/俯仰/偏航力矩）
     - 经过内外环控制之后得到的一个推力U~1~与三个力矩U~2~~ U~4~，此四者经`电机转速逆变换`后，变为 ω~1~~ ω~4~（ ω~1~ ~ ω~4~模拟实际四旋翼无人机的四个电机转速，得到`电机模型`）
     - 由`电机模型`延展到`飞行器数学模型`，（期间需考虑空气阻力、螺旋效应等因素的影响）。飞行器数学模型再实时进行`姿态/位置反馈`。
 
@@ -33,7 +33,7 @@
 
 > Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA3NjUxMDE2MiwtMTM4NzcxNjUzMCw4Nz
-U3MjE3MTYsMTA3MDA5ODM0NSwzMTM0NTgwMjAsLTczMDcwNDYw
-OSwyMTI0NjczNjQ2LDE4NzIyNDIxMDldfQ==
+eyJoaXN0b3J5IjpbODk0ODIyNTk4LDIwNzY1MTAxNjIsLTEzOD
+c3MTY1MzAsODc1NzIxNzE2LDEwNzAwOTgzNDUsMzEzNDU4MDIw
+LC03MzA3MDQ2MDksMjEyNDY3MzY0NiwxODcyMjQyMTA5XX0=
 -->
