四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -4,6 +4,9 @@
 
 ## 三维笔记说明
 
+### 一、展示二维平面四旋翼圆形轨迹跟踪（以其为例）
+ 
+![基于PID的二维平面四旋翼圆形轨迹跟踪](/imgs/2025-04-29/2zgJqCdRNayZgQQu.png "基于PID的二维平面四旋翼圆形轨迹跟踪")
 
 
 
@@ -11,5 +14,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4ODg5NTQxNjJdfQ==
+eyJoaXN0b3J5IjpbMTgwMTk3ODY1Nl19
 -->
