四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -4,12 +4,13 @@
 
 ## 三维笔记说明
 
-### 一、展示三维平面四旋翼圆形轨迹跟踪（以其为例）
-![基于PID的二维平面四旋翼圆形轨迹跟踪](/imgs/2025-05-04/XCa9LOXWW6ZH955l.png "基于PID的二维平面四旋翼圆形轨迹跟踪")
+### 一、展示三维平面四旋翼8字形轨迹跟踪（以其为例）
+
+![基于PID的三维平面四旋翼8字形轨迹跟踪](/imgs/2025-05-04/XCa9LOXWW6ZH955l.png "基于PID的三维平面四旋翼8字形轨迹跟踪")
 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMDcxNDM2ODNdfQ==
+eyJoaXN0b3J5IjpbMjA1NTE3Njg0XX0=
 -->
