四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -8,9 +8,10 @@
 
 ![基于PID的三维平面四旋翼8字形轨迹跟踪](/imgs/2025-05-04/XCa9LOXWW6ZH955l.png "基于PID的三维平面四旋翼8字形轨迹跟踪")
 
+### 三、轨迹生成
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA1NTE3Njg0XX0=
+eyJoaXN0b3J5IjpbODY3ODY3Nzg3LDIwNTUxNzY4NF19
 -->
