四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -53,7 +53,7 @@
 
 ### 三、轨迹生成
 
-1. 一般的轨迹都是以正弦波的形式来生成的，即为simulink里的**Sine Wave**模块生成，只需要**Sine Wave正弦波模块**、**Outpart输出模块**、**Mux模块**与**To Workspace模块，较为简单。
+1. 一般的轨迹都是以正弦波的形式来生成的，即为simulink里的`Sine Wave`模块生成，只需要`Sine Wave`正弦波模块、`Outpart`输出模块、`Mux`模块与`To Workspace`模块，较为简单。
 
 如下图展示：
 
@@ -336,5 +336,5 @@ end
 
 <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=114423012263973&bvid=BV1tzGUzPEHj&cid=29701508334&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NDc0ODkxMjksMzQyNDc2OTU3XX0=
+eyJoaXN0b3J5IjpbLTEyODM3OTcyMywzNDI0NzY5NTddfQ==
 -->
