四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -8,10 +8,54 @@
 
 ![基于PID的三维平面四旋翼8字形轨迹跟踪](/imgs/2025-05-04/XCa9LOXWW6ZH955l.png "基于PID的三维平面四旋翼8字形轨迹跟踪")
 
+### 二、状态方程解读
+
+### **状态方程体系**
+
+1.  $$ \dot{y} =vy\dot{y} = v_yy˙= v_y $$
+
+    -   ​**物理意义**：y方向位置变化率等于y方向速度
+    -   ​**动力学层级**：运动学方程（位置与速度的关系）
+    
+2.  $$ ​\dot{z}=vz\dot{z} = v_zz˙=vz​ $$
+    
+    -   ​**物理意义**：z方向（垂直方向）位置变化率等于z方向速度
+    -   ​**动力学层级**：运动学方程（位置与速度的关系）
+    
+3.  $$ ϕ˙=ω\dot{\phi} = ω $$    
+    -   ​**物理意义**：四旋翼俯仰角（绕x轴的旋转角度）变化率等于角速度
+    -   ​**动力学层级**：旋转运动学方程（角度与角速度的关系）
+
+----------
+
+4.  ​$$ \dot{v}_y = \frac{F \sin \phi}{m} $$
+    
+    -   ​**物理意义**：y方向加速度由推力的水平分量产生
+    -   ​**关键参数**：
+        -   F：旋翼总推力（控制输入）
+        -   ϕ\phi：俯仰角（推力方向控制）
+        -   m：四旋翼质量
+    -   ​**动力学层级**：平移动力学方程（牛顿第二定律）
+    
+5.   $$ \dot{v}_z = \frac{F \cos \phi}{m} - g $$
+    
+   -   ​**物理意义**：z方向加速度由推力的垂直分量减去重力加速度
+    -   ​**关键参数**：
+        -   g：重力加速度（向下作用）
+   -   ​**动力学层级**：平移动力学方程（含重力补偿）
+    
+6.   $$ \dot{\omega} = -\frac{1}{J} M $$
+    
+   -   ​**物理意义**：角加速度由力矩驱动，负号表示力矩方向与旋转方向定义相反
+    -   ​**关键参数**：
+        -   M：力矩（控制输入）
+        -   J：转动惯量
+   -   ​**动力学层级**：旋转动力学方程（角动量定理）
+
 ### 三、轨迹生成
 
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc0ODM2ODMyMSwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbMjAyNjM5NjI5NSwyMDU1MTc2ODRdfQ==
 -->
