四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -11,7 +11,14 @@
 ### 二、状态方程解读
 
 ### **状态方程体系**
+#### **1. 位置动力学**
 
+⎩⎨⎧​x˙=vx​y˙​=vy​z˙=vz​​
+1.  $$ \dot{x} =vx\dot{x} = v_xx˙= v_x $$
+
+    -   ​**物理意义**：x方向位置变化率等于x方向速度
+    -   ​**动力学层级**：运动学方程（位置与速度的关系）
+    
 1.  $$ \dot{y} =vy\dot{y} = v_yy˙= v_y $$
 
     -   ​**物理意义**：y方向位置变化率等于y方向速度
@@ -57,5 +64,5 @@
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAyNjM5NjI5NSwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbMTQzOTg3ODU1NSwyMDU1MTc2ODRdfQ==
 -->
