四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -11,7 +11,56 @@
 ### 二、状态方程解读
 
 ### **状态方程体系**
+根据您提供的图片内容和三维无人机动力学的要求，以下是修正后的**三维多旋翼无人机状态方程**的规范形式。此方程结合了图片中的二维模型扩展与三维空间的完整自由度：
 
+----------
+
+### ​**一、系统状态变量**
+
+x=​xyzvx​vy​vz​ϕθψωϕ​ωθ​ωψ​​​,u=​Fx​Fy​Fz​Mϕ​Mθ​Mψ​​​
+
+-   ​**位置**: x,y,z
+-   ​**线速度**: vx​,vy​,vz​
+-   ​**姿态角（欧拉角）​**: ϕ（横滚角）, θ（俯仰角）, ψ（偏航角）
+-   ​**角速度**: ωϕ​,ωθ​,ωψ​
+-   ​**控制输入**:
+    -   Fx​,Fy​,Fz​：x/y/z轴方向的控制力
+    -   Mϕ​,Mθ​,Mψ​：绕各轴的力矩
+
+----------
+
+### ​**二、三维状态方程**
+
+修正图片中的公式错误（如速度与加速度混淆），并扩展至三维空间：
+
+#### ​**1. 位置动力学**
+
+$$
+\begin{cases} 
+\dot{x} = v_x \\ 
+\dot{y} = v_y \\ 
+\dot{z} = v_z 
+\end{cases}
+$$
+#### 
+
+​**2. 线速度动力学**
+
+由牛顿第二定律推导（含重力补偿）：
+
+⎩⎨⎧​v˙x​=mFx​​v˙y​=mFy​​v˙z​=mFz​​−g​
+
+#### ​**3. 姿态角动力学**
+
+姿态角变化率等于对应角速度：
+
+⎩⎨⎧​ϕ˙​=ωϕ​θ˙=ωθ​ψ˙​=ωψ​​
+
+#### ​**4. 角速度动力学**
+
+由欧拉方程推导（转动惯量 Jx​,Jy​,Jz​）：
+
+⎩⎨⎧​ω˙ϕ​=Jx​Mϕ​​ω˙θ​=Jy​Mθ​​ω˙ψ​=Jz​Mψ​​​
 #### **1. 位置动力学**
 
 1.  $$ \dot{x} =vx\dot{x} = v_xx˙= v_x $$
@@ -64,5 +113,5 @@
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQzNDcxNDU1NSwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbMTY3NjM5NDM3NSwyMDU1MTc2ODRdfQ==
 -->
