四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -11,9 +11,6 @@
 ### 二、状态方程解读
 
 ### **状态方程体系**
-根据您提供的图片内容和三维无人机动力学的要求，以下是修正后的**三维多旋翼无人机状态方程**的规范形式。此方程结合了图片中的二维模型扩展与三维空间的完整自由度：
-
-----------
 
 ### ​**一、系统状态变量**
 
@@ -42,13 +39,18 @@ $$
 \dot{z} = v_z 
 \end{cases}
 $$
-#### 
 
-​**2. 线速度动力学**
+#### **2. 线速度动力学**
 
 由牛顿第二定律推导（含重力补偿）：
 
-⎩⎨⎧​v˙x​=mFx​​v˙y​=mFy​​v˙z​=mFz​​−g​
+$$
+\begin{cases} 
+\dot{v}_x = \frac{F_x}{m} \\ 
+\dot{v}_y = \frac{F_y}{m} \\ 
+\dot{v}_z = \frac{F_z}{m} - g 
+\end{cases}
+$$
 
 #### ​**3. 姿态角动力学**
 
@@ -113,5 +115,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY3NjM5NDM3NSwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbMjExNzE4OTQxNiwyMDU1MTc2ODRdfQ==
 -->
