四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -17,7 +17,7 @@
 x=​xyzvx​vy​vz​ϕθψωϕ​ωθ​ωψ​​​,u=​Fx​Fy​Fz​Mϕ​Mθ​Mψ​​​
 
 -   ​**位置**: x,y,z
--   ​**线速度**: vx​,vy​,vz​
+-   ​**线速度**: v~x~​,v~y~​,v~z~​
 -   ​**姿态角（欧拉角）​**: ϕ（横滚角）, θ（俯仰角）, ψ（偏航角）
 -   ​**角速度**: ωϕ​,ωθ​,ωψ​
 -   ​**控制输入**:
@@ -115,5 +115,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjExNzE4OTQxNiwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbLTE5ODIyOTY1OCwyMDU1MTc2ODRdfQ==
 -->
