--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -18,11 +18,11 @@ x=​xyzvx​vy​vz​ϕθψωϕ​ωθ​ωψ​​​,u=​Fx​Fy​Fz​Mϕ
 
 -   ​**位置**: x,y,z
 -   ​**线速度**: v~x~​,v~y~​,v~z~​
--   ​**姿态角（欧拉角）​**: ϕ（横滚角）, θ（俯仰角）, ψ（偏航角）
--   ​**角速度**: ωϕ​,ωθ​,ωψ​
+-   ​**姿态角（欧拉角）​**:  ψ（偏航角），ϕ（横滚角）, θ（俯仰角）
+-   ​**角速度**: ω~ϕ~​,ω~θ~​,ω~ψ​~
 -   ​**控制输入**:
-    -   Fx​,Fy​,Fz​：x/y/z轴方向的控制力
-    -   Mϕ​,Mθ​,Mψ​：绕各轴的力矩
+    -   F~x~​,F~y~​,F~z~​：x/y/z轴方向的控制力
+    -   M~ϕ​~,M~θ~​,M~ψ~​：绕各轴的力矩
 
 ----------
 
@@ -115,5 +115,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5ODIyOTY1OCwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbLTE4MzQ5Mzc4NDAsMjA1NTE3Njg0XX0=
 -->
