四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -54,7 +54,14 @@ $$
 
 姿态角变化率等于对应角速度：
 
-⎩⎨⎧​ϕ˙​=ωϕ​θ˙=ωθ​ψ˙​=ωψ​​
+
+$$
+\begin{cases} 
+\dot{ψ} = \frac{F_x}{m} \\ 
+\dot{v}_y = \frac{F_y}{m} \\ 
+\dot{v}_z = \frac{F_z}{m} - g 
+\end{cases}
+$$
 
 #### ​**4. 角速度动力学**
 
@@ -113,5 +120,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMDMzOTIzOCwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbLTE1ODkxODI0OTQsMjA1NTE3Njg0XX0=
 -->
