四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -57,9 +57,9 @@ $$
 
 $$
 \begin{cases} 
-\dot{ψ} = \frac{F_x}{m} \\ 
-\dot{v}_y = \frac{F_y}{m} \\ 
-\dot{v}_z = \frac{F_z}{m} - g 
+\dot{ψ} = ω_ψ \\ 
+\dot{ψ} = ω_ψ \\ 
+\dot{ψ} = ω_ψ \\ 
 \end{cases}
 $$
 
@@ -120,5 +120,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODkxODI0OTQsMjA1NTE3Njg0XX0=
+eyJoaXN0b3J5IjpbMjAyNTcxOTEyOCwyMDU1MTc2ODRdfQ==
 -->
