四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -58,8 +58,8 @@ $$
 $$
 \begin{cases} 
 \dot{ψ} = ω_ψ \\ 
-\dot{ψ} = ω_ψ \\ 
-\dot{ψ} = ω_ψ \\ 
+\dot{ϕ} = ω_ϕ \\ 
+\dot{θ} = ω_θ \\ 
 \end{cases}
 $$
 
@@ -120,5 +120,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAyNTcxOTEyOCwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbMTc5MDM5NjA4OCwyMDU1MTc2ODRdfQ==
 -->
