四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -12,9 +12,24 @@
 
 ### **状态方程体系**
 
-### ​**一、系统状态变量**
+#### ​*系统状态变量**
 
-x=​xyzvx​vy​vz​ϕθψωϕ​ωθ​ωψ​​​,u=​Fx​Fy​Fz​Mϕ​Mθ​Mψ​​​
+$$
+\mathbf{x} = \left\{
+\begin{array}{ll}
+    \text{位置:}       & x, y, z \\
+    \text{线速度:}    & v_x, v_y, v_z \\
+    \text{姿态角:}    & \phi, \theta, \psi \\
+    \text{角速度:}    & \omega_\phi, \omega_\theta, \omega_\psi
+\end{array}
+\right\}, \quad
+\mathbf{u} = \left\{
+\begin{array}{ll}
+    \text{力:}       & F_x, F_y, F_z \\
+    \text{力矩:}     & M_\phi, M_\theta, M_\psi
+\end{array}
+\right\}
+$$
 
 -   ​**位置**: x,y,z
 -   ​**线速度**: v~x~​,v~y~​,v~z~​
@@ -120,5 +135,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc5MDM5NjA4OCwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbLTEwNDI1OTI3ODAsMjA1NTE3Njg0XX0=
 -->
