四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -12,7 +12,7 @@
 
 ### **状态方程体系**
 
-#### ​*系统状态变量**
+### ​**1、系统状态变量**
 
 $$
 \mathbf{x} = \left\{
@@ -41,7 +41,7 @@ $$
 
 ----------
 
-### ​**二、三维状态方程**
+### ​**2、三维状态方程**
 
 #### ​**1. 位置动力学**
 
@@ -135,5 +135,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNDI1OTI3ODAsMjA1NTE3Njg0XX0=
+eyJoaXN0b3J5IjpbLTIwOTgyMTMxLDIwNTUxNzY4NF19
 -->
