四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -82,7 +82,14 @@ $$
 
 由欧拉方程推导（转动惯量 Jx​,Jy​,Jz​）：
 
-⎩⎨⎧​ω˙ϕ​=Jx​Mϕ​​ω˙θ​=Jy​Mθ​​ω˙ψ​=Jz​Mψ​​​
+
+$$
+\begin{cases} 
+\dot{ψ}_ψ = \frac{F_x}{m} \\ 
+\dot{v}_y = \frac{F_y}{m} \\ 
+\dot{v}_z = \frac{F_z}{m} - g 
+\end{cases}
+$$
 #### **1. 位置动力学**
 
 1.  $$ \dot{x} =vx\dot{x} = v_xx˙= v_x $$
@@ -135,5 +142,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwOTgyMTMxLDIwNTUxNzY4NF19
+eyJoaXN0b3J5IjpbLTg1OTIyNzQ4MywyMDU1MTc2ODRdfQ==
 -->
