四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -85,9 +85,9 @@ $$
 
 $$
 \begin{cases} 
-\dot{ψ}_ψ = \frac{F_x}{m} \\ 
-\dot{v}_y = \frac{F_y}{m} \\ 
-\dot{v}_z = \frac{F_z}{m} - g 
+\dot{ω}_ψ = \frac{M_ψ}{m} \\ 
+\dot{ω}_ϕ = \frac{M_ϕ}{m} \\ 
+\dot{ω}_θ = \frac{M_θ}{J-} - g 
 \end{cases}
 $$
 #### **1. 位置动力学**
@@ -142,5 +142,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg1OTIyNzQ4MywyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbMTQwMzY4MDQ2NSwyMDU1MTc2ODRdfQ==
 -->
