四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -80,14 +80,14 @@ $$
 
 #### ​**4. 角速度动力学**
 
-由欧拉方程推导（转动惯量 Jx​,Jy​,Jz​）：
+由欧拉方程推导（转动惯量 J~x~​,J~y~​,J~z~​）：
 
 
 $$
 \begin{cases} 
-\dot{ω}_ψ = \frac{M_ψ}{m} \\ 
-\dot{ω}_ϕ = \frac{M_ϕ}{m} \\ 
-\dot{ω}_θ = \frac{M_θ}{J-} - g 
+\dot{ω}_ϕ = \frac{M_ψ}{m} \\ 
+\dot{ω}_θ = \frac{M_θ}{m} \\ 
+\dot{ω}_ψ = \frac{M_θ}{J} - g 
 \end{cases}
 $$
 #### **1. 位置动力学**
@@ -142,5 +142,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQwMzY4MDQ2NSwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbMTQzMjE5NTMwMSwyMDU1MTc2ODRdfQ==
 -->
