四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -48,7 +48,9 @@ $$
 $$
 \begin{cases} 
 \dot{x} = v_x \\ 
+\\
 \dot{y} = v_y \\ 
+\\
 \dot{z} = v_z 
 \end{cases}
 $$
@@ -60,7 +62,9 @@ $$
 $$
 \begin{cases} 
 \dot{v}_x = \frac{F_x}{m} \\ 
+\\
 \dot{v}_y = \frac{F_y}{m} \\ 
+\\
 \dot{v}_z = \frac{F_z}{m} - g 
 \end{cases}
 $$
@@ -85,9 +89,11 @@ $$
 
 $$
 \begin{cases} 
-\dot{ω}_ϕ = \frac{M_ψ}{m} \\ 
-\dot{ω}_θ = \frac{M_θ}{m} \\ 
-\dot{ω}_ψ = \frac{M_θ}{J} - g 
+\dot{ω}_ϕ = \frac{M_ϕ}{J_x} \\ 
+\\
+\dot{ω}_θ = \frac{M_θ}{J_y} \\ 
+\\
+\dot{ω}_ψ = \frac{M_ψ}{J_z}
 \end{cases}
 $$
 #### **1. 位置动力学**
@@ -142,5 +148,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQzMjE5NTMwMSwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbMTY4NDMxNzUwMiwyMDU1MTc2ODRdfQ==
 -->
