--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -47,10 +47,8 @@ $$
 
 $$
 \begin{cases} 
-\dot{x} = v_x \\ 
-\\
-\dot{y} = v_y \\ 
-\\
+\dot{x} = v_x \\ \\
+\dot{y} = v_y \\ \\
 \dot{z} = v_z 
 \end{cases}
 $$
@@ -61,10 +59,8 @@ $$
 
 $$
 \begin{cases} 
-\dot{v}_x = \frac{F_x}{m} \\ 
-\\
-\dot{v}_y = \frac{F_y}{m} \\ 
-\\
+\dot{v}_x = \frac{F_x}{m} \\ \\
+\dot{v}_y = \frac{F_y}{m} \\ \\
 \dot{v}_z = \frac{F_z}{m} - g 
 \end{cases}
 $$
@@ -76,8 +72,8 @@ $$
 
 $$
 \begin{cases} 
-\dot{ψ} = ω_ψ \\ 
-\dot{ϕ} = ω_ϕ \\ 
+\dot{ψ} = ω_ψ \\ \\
+\dot{ϕ} = ω_ϕ \\ \\
 \dot{θ} = ω_θ \\ 
 \end{cases}
 $$
@@ -89,10 +85,8 @@ $$
 
 $$
 \begin{cases} 
-\dot{ω}_ϕ = \frac{M_ϕ}{J_x} \\ 
-\\
-\dot{ω}_θ = \frac{M_θ}{J_y} \\ 
-\\
+\dot{ω}_ϕ = \frac{M_ϕ}{J_x} \\ \\
+\dot{ω}_θ = \frac{M_θ}{J_y} \\ \\
 \dot{ω}_ψ = \frac{M_ψ}{J_z}
 \end{cases}
 $$
@@ -148,5 +142,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY4NDMxNzUwMiwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbMTgyNDUzNjU4LDIwNTUxNzY4NF19
 -->
