四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -85,9 +85,9 @@ $$
 
 $$
 \begin{cases} 
-\dot{ω}_ϕ = \frac{M_ϕ}{J_x} \\ \\
-\dot{ω}_θ = \frac{M_θ}{J_y} \\ \\
-\dot{ω}_ψ = \frac{M_ψ}{J_z}
+\dot{ω}_ϕ = -\frac{M_ϕ}{J_x} \\ \\
+\dot{ω}_θ = -\frac{M_θ}{J_y} \\ \\
+\dot{ω}_ψ = -\frac{M_ψ}{J_z}
 \end{cases}
 $$
 #### **1. 位置动力学**
@@ -142,5 +142,5 @@ $$
 
 ![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgyNDUzNjU4LDIwNTUxNzY4NF19
+eyJoaXN0b3J5IjpbNzMxMzQyNzM5LDIwNTUxNzY4NF19
 -->
