四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -140,7 +140,7 @@ $$
 ### 三、轨迹生成
 
 
-![输入图片说明](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png)
+![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMxMzQyNzM5LDIwNTUxNzY4NF19
+eyJoaXN0b3J5IjpbLTc3MjU4NDE2MCwyMDU1MTc2ODRdfQ==
 -->
