四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -34,10 +34,10 @@ $$
 -   ​**位置**: x,y,z
 -   ​**线速度**: v~x~​,v~y~​,v~z~​
 -   ​**姿态角（欧拉角）​**:  ψ（偏航角），ϕ（横滚角）, θ（俯仰角）
--   ​**角速度**: ω~ϕ~​,ω~θ~​,ω~ψ​~
+-   ​**角速度**: ω~ϕ~​ ω~θ~ ω~ψ​~
 -   ​**控制输入**:
-    -   F~x~​,F~y~​,F~z~​：x/y/z轴方向的控制力
-    -   M~ϕ​~,M~θ~​,M~ψ~​：绕各轴的力矩
+    -   F~x~​ F~y~​ F~z~​：x/y/z轴方向的控制力
+    -   M~ϕ​~ M~θ~ ,M~ψ~​：绕各轴的力矩
 
 ----------
 
@@ -142,5 +142,5 @@ $$
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc3MjU4NDE2MCwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbLTUwMTM0NDYxMCwyMDU1MTc2ODRdfQ==
 -->
