四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -94,9 +94,14 @@ $$
 
 ### 三、轨迹生成
 
+复制
+
+```markdown
+常量输入u（时间变量） → 正弦函数模块 → 运算处理 → 四维输出[x_d,y_d,z_d,psi_d] → 轨迹合成(out_desire)
+```
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4ODQ3NTM0MzcsLTUwMTM0NDYxMCwyMD
-U1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbLTc5ODk5NDk3NiwtMTg4NDc1MzQzNywtNT
+AxMzQ0NjEwLDIwNTUxNzY4NF19
 -->
