四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -94,6 +94,7 @@ $$
 
 ### 三、轨迹生成
 
+### 1输入输出路径
 
 ```markdown
 常量输入u（时间变量） → 正弦函数模块 → 运算处理 → 四维输出[x_d,y_d,z_d,psi_d] → 轨迹合成(out_desire)
@@ -101,6 +102,7 @@ $$
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgzNjY0Nzg3NywtNzk4OTk0OTc2LC0xOD
-g0NzUzNDM3LC01MDEzNDQ2MTAsMjA1NTE3Njg0XX0=
+eyJoaXN0b3J5IjpbLTEyMzEyNjExNTEsMTgzNjY0Nzg3NywtNz
+k4OTk0OTc2LC0xODg0NzUzNDM3LC01MDEzNDQ2MTAsMjA1NTE3
+Njg0XX0=
 -->
