四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -94,15 +94,36 @@ $$
 
 ### 三、轨迹生成
 
-### 1输入输出路径
+### 1、输入输出路径
 
 ```markdown
 常量输入u（时间变量） → 正弦函数模块 → 运算处理 → 四维输出[x_d,y_d,z_d,psi_d] → 轨迹合成(out_desire)
 ```
+### 核心模块详解
+
+#### 1. 时间基准模块
+
+-   ​**输入源**：左侧的**常量模块(u)**代表时间变量，作为轨迹生成的基准参数
+-   ​**参数设置**：默认时间变量u通过仿真时钟自动生成，对应Simulink仿真环境的时间轴
+
+#### 2. 轨迹生成解析
+
+-   ​**X轴轨迹(x_d)**：`4.5*sin(0.4*u)`
+    -   振幅4.5米，角频率0.4 rad/s（周期约15.7秒）
+    -   产生水平方向的正弦波动
+-   ​**Y轴轨迹(y_d)**：`4.5*sin(0.2*u) + 2`
+    -   振幅4.5米，角频率0.2 rad/s（周期约31.4秒）
+    -   垂直偏移量+2米，形成非对称波形
+-   ​**Z轴高度(z_d)**：`4.5*sin(0.4*u) + 3`
+    -   与X轴同频率的正弦波动
+    -   垂直基准高度3米
+-   ​**偏航角(psi_d)**：`-5.5*u + 4`
+    -   随时间线性变化的航向角（-5.5度/秒）
+    -   初始角度4度
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMzEyNjExNTEsMTgzNjY0Nzg3NywtNz
-k4OTk0OTc2LC0xODg0NzUzNDM3LC01MDEzNDQ2MTAsMjA1NTE3
-Njg0XX0=
+eyJoaXN0b3J5IjpbMTczNTk2MzM0NiwxODM2NjQ3ODc3LC03OT
+g5OTQ5NzYsLTE4ODQ3NTM0MzcsLTUwMTM0NDYxMCwyMDU1MTc2
+ODRdfQ==
 -->
