四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -99,11 +99,11 @@ $$
 ```markdown
 常量输入u（时间变量） → 正弦函数模块 → 运算处理 → 四维输出[x_d,y_d,z_d,psi_d] → 轨迹合成(out_desire)
 ```
-### 核心模块详解
+### 2、核心模块详解
 
 #### 1. 时间基准模块
 
--   ​**输入源**：左侧的**常量模块(u)**代表时间变量，作为轨迹生成的基准参数
+-   ​**输入源**：左侧的`(u)`代表时间变量，作为轨迹生成的基准参数
 -   ​**参数设置**：默认时间变量u通过仿真时钟自动生成，对应Simulink仿真环境的时间轴
 
 #### 2. 轨迹生成解析
@@ -123,7 +123,7 @@ $$
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTczNTk2MzM0NiwxODM2NjQ3ODc3LC03OT
-g5OTQ5NzYsLTE4ODQ3NTM0MzcsLTUwMTM0NDYxMCwyMDU1MTc2
-ODRdfQ==
+eyJoaXN0b3J5IjpbLTEzOTQxMzE2MDQsMTczNTk2MzM0NiwxOD
+M2NjQ3ODc3LC03OTg5OTQ5NzYsLTE4ODQ3NTM0MzcsLTUwMTM0
+NDYxMCwyMDU1MTc2ODRdfQ==
 -->
