四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -103,7 +103,7 @@ $$
 
 #### 1. 时间基准模块
 
--   ​**输入源**：左侧的`(u)`代表时间变量，作为轨迹生成的基准参数
+-   ​**输入源**：左侧的`Clock(u)`模块代表时间变量，作为轨迹生成的基准参数
 -   ​**参数设置**：默认时间变量u通过仿真时钟自动生成，对应Simulink仿真环境的时间轴
 
 #### 2. 轨迹生成解析
@@ -123,7 +123,7 @@ $$
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzOTQxMzE2MDQsMTczNTk2MzM0NiwxOD
-M2NjQ3ODc3LC03OTg5OTQ5NzYsLTE4ODQ3NTM0MzcsLTUwMTM0
-NDYxMCwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbNzcxNzE2Nzc4LDE3MzU5NjMzNDYsMTgzNj
+Y0Nzg3NywtNzk4OTk0OTc2LC0xODg0NzUzNDM3LC01MDEzNDQ2
+MTAsMjA1NTE3Njg0XX0=
 -->
