--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -111,7 +111,7 @@ $$
 -   ​**X轴轨迹(x_d)**：`4.5*sin(0.4*u)`
     -   振幅4.5米，角频率0.4 rad/s（周期约15.7秒）
     -   产生水平方向的正弦波动
--   ​**Y轴轨迹(y_d)**：`4.5*sin(0.2*u) + 2`
+-   ​**Y轴轨迹(y_d)**：`4.5*sin(0.2*u)`
     -   振幅4.5米，角频率0.2 rad/s（周期约31.4秒）
     -   垂直偏移量+2米，形成非对称波形
 -   ​**Z轴高度(z_d)**：`4.5*sin(0.4*u) + 3`
@@ -123,7 +123,7 @@ $$
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzcxNzE2Nzc4LDE3MzU5NjMzNDYsMTgzNj
-Y0Nzg3NywtNzk4OTk0OTc2LC0xODg0NzUzNDM3LC01MDEzNDQ2
-MTAsMjA1NTE3Njg0XX0=
+eyJoaXN0b3J5IjpbMTY4NTczMjg3Nyw3NzE3MTY3NzgsMTczNT
+k2MzM0NiwxODM2NjQ3ODc3LC03OTg5OTQ5NzYsLTE4ODQ3NTM0
+MzcsLTUwMTM0NDYxMCwyMDU1MTc2ODRdfQ==
 -->
