四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -114,7 +114,8 @@ $$
 -   ​**Y轴轨迹(y_d)**：`4.5*sin(0.2*u)`
     -   振幅4.5米，角频率0.2 rad/s（周期约31.4秒）
     -   垂直偏移量+2米，形成非对称波形
--   ​**Z轴高度(z_d)**：`4.5*sin(0.4*u) + 3`
+    - ​**轨迹特性**：与X轴形成2:1频率比，相位差为0°，生成“8字形”轨迹
+-   ​**Z轴高度(z_d)**：`4.5*sin(0.4*u) + 5.5`
     -   与X轴同频率的正弦波动
     -   垂直基准高度3米
 -   ​**偏航角(psi_d)**：`-5.5*u + 4`
@@ -123,7 +124,7 @@ $$
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc2MDE4MDY2Myw3NzE3MTY3NzgsMTczNT
-k2MzM0NiwxODM2NjQ3ODc3LC03OTg5OTQ5NzYsLTE4ODQ3NTM0
-MzcsLTUwMTM0NDYxMCwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbODE0Nzc5NDQxLDc3MTcxNjc3OCwxNzM1OT
+YzMzQ2LDE4MzY2NDc4NzcsLTc5ODk5NDk3NiwtMTg4NDc1MzQz
+NywtNTAxMzQ0NjEwLDIwNTUxNzY4NF19
 -->
