四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -113,17 +113,16 @@ $$
     -   生成水平横向周期性正弦波动运动
 -   ​**Y轴轨迹(y_d)**：`4.5*sin(0.2*u)`
     -   振幅4.5米，角频率0.2 rad/s（周期约31.4秒）
-    -   ​轨迹特性：与X轴形成2:1频率比，相位差为0°，生成“8字形”轨迹
+    -   ​与X轴形成2:1频率比，相位差为0°，生成“8字形”轨迹
 -   ​**Z轴高度(z_d)**：`4.5*sin(0.4*u)-5.5`
-    -   与X轴同频率的正弦波动
-    -   垂直基准高度3米
--   ​**偏航角(psi_d)**：`-5.5*u + 4`
-    -   随时间线性变化的航向角（-5.5度/秒）
-    -   初始角度4度
+    -   在基准高度-5.5米的基础上叠加振幅4.5米的正弦波动（角频率0.4 rad/s，与X轴同步）
+    -   模拟无人机在垂直方向的周期性起伏
+-   ​**偏航角(psi_d)**：`0`
+    -  设定偏航角（Yaw角）为固定值0°，即无人机始终朝向初始方向飞行，无航向调整
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgyMDMzMzY2Miw3NzE3MTY3NzgsMTczNT
-k2MzM0NiwxODM2NjQ3ODc3LC03OTg5OTQ5NzYsLTE4ODQ3NTM0
-MzcsLTUwMTM0NDYxMCwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbMjQ5NTMyNjM4LDc3MTcxNjc3OCwxNzM1OT
+YzMzQ2LDE4MzY2NDc4NzcsLTc5ODk5NDk3NiwtMTg4NDc1MzQz
+NywtNTAxMzQ0NjEwLDIwNTUxNzY4NF19
 -->
