四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -118,11 +118,11 @@ $$
     -   在基准高度-5.5米的基础上叠加振幅4.5米的正弦波动（角频率0.4 rad/s，与X轴同步）
     -   模拟无人机在垂直方向的周期性起伏
 -   ​**偏航角(psi_d)**：`0`
-    -  设定偏航角（Yaw角）为固定值0°，即无人机始终朝向初始方向飞行，无航向调整
+    -  设定偏航角（Yaw角）为固定值0°，即无人机始终朝向初始方向飞行，无航向调整'
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjQ5NTMyNjM4LDc3MTcxNjc3OCwxNzM1OT
-YzMzQ2LDE4MzY2NDc4NzcsLTc5ODk5NDk3NiwtMTg4NDc1MzQz
-NywtNTAxMzQ0NjEwLDIwNTUxNzY4NF19
+eyJoaXN0b3J5IjpbNjgyMDQ3NTc5LDI0OTUzMjYzOCw3NzE3MT
+Y3NzgsMTczNTk2MzM0NiwxODM2NjQ3ODc3LC03OTg5OTQ5NzYs
+LTE4ODQ3NTM0MzcsLTUwMTM0NDYxMCwyMDU1MTc2ODRdfQ==
 -->
