--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -109,20 +109,32 @@ $$
 #### 2. 轨迹生成解析
 
 -   ​**X轴轨迹(x_d)**：`4.5*sin(0.4*u)`
+
     -   振幅4.5米，角频率0.4 rad/s（周期约15.7秒）
     -   生成水平横向周期性正弦波动运动
+
 -   ​**Y轴轨迹(y_d)**：`4.5*sin(0.2*u)`
+
     -   振幅4.5米，角频率0.2 rad/s（周期约31.4秒）
     -   ​与X轴形成2:1频率比，相位差为0°，生成“8字形”轨迹
+
 -   ​**Z轴高度(z_d)**：`4.5*sin(0.4*u)-5.5`
+
     -   在基准高度-5.5米的基础上叠加振幅4.5米的正弦波动（角频率0.4 rad/s，与X轴同步）
     -   模拟无人机在垂直方向的周期性起伏
+
 -   ​**偏航角(psi_d)**：`0`
-    -  设定偏航角（Yaw角）为固定值0°，即无人机始终朝向初始方向飞行，无航向调整'
+
+    -  设定偏航角（Yaw角）为固定值0°，即无人机始终朝向初始方向飞行，无航向调整
+
+- **输出模块（out.desire）​**
+
+	-   ​**功能**：将 `x_d`、`y_d`、`z_d`、`psi_d` 四个信号封装为复合输出信号。
+	-   ​**接口形式**：通常为总线信号（Bus Signal）或结构体，供之后飞控系统（如PID控制器）同步读取四自由度期望值。
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjgyMDQ3NTc5LDI0OTUzMjYzOCw3NzE3MT
-Y3NzgsMTczNTk2MzM0NiwxODM2NjQ3ODc3LC03OTg5OTQ5NzYs
-LTE4ODQ3NTM0MzcsLTUwMTM0NDYxMCwyMDU1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbLTU0NzgyMzc0MSwyNDk1MzI2MzgsNzcxNz
+E2Nzc4LDE3MzU5NjMzNDYsMTgzNjY0Nzg3NywtNzk4OTk0OTc2
+LC0xODg0NzUzNDM3LC01MDEzNDQ2MTAsMjA1NTE3Njg0XX0=
 -->
