四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -130,11 +130,11 @@ $$
 - **输出模块（out.desire）​**
 
 	-   ​**功能**：将 `x_d`、`y_d`、`z_d`、`psi_d` 四个信号封装为复合输出信号。
-	-   ​**接口形式**：通常为总线信号（Bus Signal）或结构体，供之后飞控系统（如PID控制器）同步读取四自由度期望值。
+	-   ​**接口形式**：通常为总线信号（Bus Signal）或结构体，供之后飞控系统（PID控制器）同步读取四自由度期望值。
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU0NzgyMzc0MSwyNDk1MzI2MzgsNzcxNz
+eyJoaXN0b3J5IjpbLTQwOTA1NjA3MywyNDk1MzI2MzgsNzcxNz
 E2Nzc4LDE3MzU5NjMzNDYsMTgzNjY0Nzg3NywtNzk4OTk0OTc2
 LC0xODg0NzUzNDM3LC01MDEzNDQ2MTAsMjA1NTE3Njg0XX0=
 -->
