四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -133,9 +133,11 @@ $$
 	-   ​**接口形式**：通常为`To Workspace`，供之后飞控系统（PID控制器）同步读取四自由度期望值。
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
+
+![输入图片说明](/imgs/2025-05-07/YhVfDGQO9EGqCwRK.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3NjA4MjM5MiwxMTI4Mjk0ODQ2LDI0OT
-UzMjYzOCw3NzE3MTY3NzgsMTczNTk2MzM0NiwxODM2NjQ3ODc3
-LC03OTg5OTQ5NzYsLTE4ODQ3NTM0MzcsLTUwMTM0NDYxMCwyMD
-U1MTc2ODRdfQ==
+eyJoaXN0b3J5IjpbLTQxMjA0MTY1LC0yNzYwODIzOTIsMTEyOD
+I5NDg0NiwyNDk1MzI2MzgsNzcxNzE2Nzc4LDE3MzU5NjMzNDYs
+MTgzNjY0Nzg3NywtNzk4OTk0OTc2LC0xODg0NzUzNDM3LC01MD
+EzNDQ2MTAsMjA1NTE3Njg0XX0=
 -->
